# wyseos-sdk-python

./: .gitignore  AGENTS.md  LICENSE  README.md  README_cn.md  RELEASES.md  SKILL.md  example.py  installation.md  installation_cn.md  mate.yaml.example  pyproject.toml  quickstart.md  requirements.txt
.github/codex/prompts/: review.md
.github/workflows/: codex-review.yml
docs/: api-product-protocol.md  example-create-product.mjs  example-marketing-session.mjs  example-session.mjs  wyse-session-protocol.md
docs/superpowers/plans/: 2026-05-11-x-execution-mode-sdk.md  2026-05-12-x-capability-e2e-examples.md  2026-05-12-x-capability-e2e-update.md
docs/superpowers/specs/: 2026-05-11-x-execution-mode-sdk-design.md  (+3 more)
examples/: quickstart.md  quickstart_cn.md
examples/auth/: auth_example.py  connectors_example.py  mate.yaml.example  oauth_url_example.py
examples/getting_started/: example.py  mate.yaml.example
examples/product_analysis/: example.py  mate.yaml.example
examples/x_capability_e2e/: README.md  assertions.py  config.py  main.py  mate.yaml.example  runner.py  scenarios.py
octoevo/mate/: __init__.py  client.py  config.py  constants.py  extension_host.py  factory.py  models.py  plan.py  task_authorization.py  task_runner.py  websocket.py
wyse_mate/: __init__.py  client.py  config.py  constants.py  errors.py  models.py  plan.py  websocket.py
wyse_mate/services/: browser.py  session.py  team.py  user.py
wyseos/mate/: __init__.py  client.py  config.py  constants.py  errors.py  extension_host.py  models.py  plan.py  task_runner.py  websocket.py
(+15 files in other folders)
