[project]
name = "octoevo"
version = "0.1.0"
description = "Python SDK for OctoEvo"
authors = [{ name = "Wyse", email = "info@wyseos.com" }]
requires-python = ">=3.9"
keywords = ["OctoEvo", "Marketing", "AI Agents", "Agentic Marketing", "Multi Agent System"]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "websockets>=11.0.0",
    "PyYAML>=6.0.0",
    "python-socks>=2.7.0",
]


[project.urls]
Homepage = "https://github.com/WyseOS/wyseos-sdk-python"
Repository = "https://github.com/WyseOS/wyseos-sdk-python"
Issues = "https://github.com/WyseOS/wyseos-sdk-python/issues"
Documentation = "https://github.com/WyseOS/wyseos-sdk-python#readme"
PyPI = "https://pypi.org/project/octoevo/"


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["octoevo*"]
